--- a/src/app/pages/consult-wizard/consult-wizard.component.html
+++ b/src/app/pages/consult-wizard/consult-wizard.component.html
@@ -1,1 +1,112 @@
-<p>consult-wizard works!</p>
+<mat-horizontal-stepper>
+    
+    <mat-step>
+        <ng-template matStepLabel>Principal</ng-template>
+
+        <div class="form-container">
+            <form [formGroup]="firstFormGroup">
+                <mat-form-field>
+                    <mat-label>Patients</mat-label>
+                    <mat-select formControlName="patient">
+                        @for (p of patients$ | async; track $index) {
+                            <mat-option [value]="p">{{p.firstName}} {{p.lastName}}</mat-option>
+                        }
+                    </mat-select>
+                </mat-form-field>
+
+                <mat-form-field>
+                    <mat-label>Choose a date</mat-label>
+                    <input matInput [matDatepicker]="picker" formControlName="consultDate">
+                    <mat-hint>DD/MM/YYYY</mat-hint>
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+
+                <mat-form-field>
+                    <input matInput placeholder="Diagnosis" formControlName="diagnosis">
+                </mat-form-field>
+
+                <mat-form-field>
+                    <input matInput placeholder="Treatment" formControlName="treatment">
+                </mat-form-field>
+
+                <button mat-button type="button" (click)="addDetail()">Add Detail</button>
+
+                @for (det of details; track $index) {
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                {{$index + 1}} {{det.diagnosis}}
+                            </mat-panel-title>
+
+                            <mat-panel-description>
+                                Click for view treatment
+                            </mat-panel-description>
+                        
+                        </mat-expansion-panel-header>
+                        
+                        <mat-form-field>
+                             <textarea matInput placeholder="Treatment" value="{{det.treatment}}"></textarea>
+                        </mat-form-field>
+
+                        <button mat-button type="button" (click)="removeDetail($index)">Remove</button>
+
+                    </mat-expansion-panel>
+                }
+
+                    <mat-form-field>
+                        <input type="text"
+                            placeholder="Select Exam"
+                            matInput
+                            formControlName="exam"
+                            [formControl]="examControl"
+                            [matAutocomplete]="autoExam">
+                            <mat-autocomplete #autoExam="matAutocomplete" [displayWith]="showExam">
+                                @for (ex of examFiltered$ | async; track $index) {
+                                    <mat-option [value]="ex">{{ex.nameExam}}</mat-option>
+                                }
+                            </mat-autocomplete>
+                    </mat-form-field>
+
+                    <button mat-button type="button" (click)="addExam()">Add Exam</button>
+
+                    <mat-list role="list">
+                        @for (ex of examsSelected; track $index) {
+                            <mat-list-item>
+                                {{$index + 1}} {{ex.nameExam}}
+                            </mat-list-item>
+                        }
+                    </mat-list>
+
+                    @for (m of medics; track $index) {
+                        <mat-card>
+                            <mat-card-header>
+                                <img mat-card-avatar [src]="m.photo">
+                                <mat-card-title>{{m.primaryName}} {{m.surname}}</mat-card-title>
+                                <mat-card-subtitle>{{m.cmpMedic}}</mat-card-subtitle>
+                            </mat-card-header>
+
+                            <img mat-card-image width="300" height="400" [src]="m.photo">
+
+                            <mat-card-content>
+                                <p>This is medic {{m.primaryName}} {{m.surname}}</p>
+                            </mat-card-content>
+
+                            <mat-card-actions>
+                                <button mat-button type="button">SELECT</button>
+                            </mat-card-actions>
+                        </mat-card>
+                    }
+            </form>
+        </div>
+
+    </mat-step>
+
+    <mat-step>
+        <ng-template matStepLabel>N° Consult</ng-template>
+    </mat-step>
+
+    <mat-step>
+        <ng-template matStepLabel>Review</ng-template>
+    </mat-step>
+</mat-horizontal-stepper>
