--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -55,7 +55,7 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of patient"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[2, 5, 10, 100]" [length]="totalElements" (page)="showMore($event)" aria-label="Select page of patient"></mat-paginator>
 
   <button mat-flat-button style="float: right;" routerLink="/pages/patient/new">
     <span>New</span>
