--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -34,6 +34,16 @@
             
             <img src="picture.jpg" width="128" style="margin-left: 120px;">
 
+            @for (m of menus; track $index) {
+                <mat-divider></mat-divider>
+                <button class="myButton" [routerLinkActive]="['active']" mat-menu-item (click)="sidenav.toggle()"
+                    routerLink="{{ m.url }}" style="cursor: pointer">
+                    <mat-icon> {{ m.icon }}</mat-icon>
+                    <span>{{ m.name }}</span>
+                </button>
+            }
+
+            <!---
             <mat-divider></mat-divider>
             <button class="myButton" mat-menu-item (click)="sidenav.toggle()"
                 routerLink="/pages/search">
@@ -76,7 +86,7 @@
                 <mat-icon>assessment</mat-icon>
                 <span>Report</span>
             </button>
-            <mat-divider></mat-divider>
+            <mat-divider></mat-divider>-->
         </mat-sidenav>
       
         <mat-sidenav-content>
